// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationLink renders <a> correctly 1`] = `
<a
  css={
    Object {
      "map": undefined,
      "name": "k49009",
      "next": undefined,
      "styles": "
    text-decoration: none;
    &:hover {
        color: #F48FB1;
    }
",
      "toString": [Function],
    }
  }
  href="https://www.google.com/"
  target="_blank"
>
  Google
</a>
`;

exports[`NavigationLink renders GastbyLink correctly 1`] = `
<a
  css={
    Object {
      "map": undefined,
      "name": "k49009",
      "next": undefined,
      "styles": "
    text-decoration: none;
    &:hover {
        color: #F48FB1;
    }
",
      "toString": [Function],
    }
  }
  href="/"
>
  Home
</a>
`;
